--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ layout: default
 <div class="button_white" style="float:right;"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div style="width:80%; float:middle;">
+	<div style="width:80%; float:center;">
 		<div class="button_white" style="width:28%; float:left;">
 			<i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a>	
 		</div>
-		<div class="button_white" style="width:28%; float:middle;">
+		<div class="button_white" style="width:28%; float:center;">
 			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/">A semi-analytical perspective</a>
 		</div>
 		<div class="button_white" style="width:28%; float:right;">
