--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
 				   
 <h3 class="page-heading">Projects</h3>
 	<div style="width:90%; float:center; margin-left:5%; margin-right:5%; margin-bottom:5%; margin-top:5%;">
-		<div class="button_white" style="float:left;">
+		<div class="button_white" style="width:28%; float:left;">
 			<i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a>	
 		</div>
 		<div class="button_white" style="width:28%; float:center;">
