--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 <div class="button_white" style="float:right; height:2em"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div style="width:90%; float:center; margin-left:5%; margin-right:5%; margin-bottom:5%; margin-top:5%;">
+	<div style="width:80%; float:center; margin: 0 auto; margin-left:10%; margin-right:10%;">
 		<div class="button_white" style="width:28%; float:left;">
 			<i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a>	
 		</div>
