--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@ layout: default
 <div class="button_white" style="float:right; height:2em"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div style="width:100%; float:center; margin: 0 auto; margin-left:12.5%; margin-right:12.5%;">
-		<div class="button_white" style="width:120px; float:left;">
+	<div style="width:450; float:center; margin: 0 auto; margin-left:12.5%; margin-right:12.5%;">
+		<div class="button_white" style="width:150px; float:left;">
 			<i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a>	
 		</div>
-		<div class="button_white" style="width:120px; float:center;">
+		<div class="button_white" style="width:150px; float:center;">
 			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/">A semi-analytical perspective</a>
 		</div>
-		<div class="button_white" style="width:120px; float:right;">
+		<div class="button_white" style="width:150px; float:right;">
 			<i class='fa fa-star fa-4x'></i><br><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a>
 		</div>
 	</div>
