--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
 		<div class="button_white" style="width:150px;">
 			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/">A semi-analytical perspective</a>
 		</div>
-		<div class="button_white" style="width:150px; float:right;">
+		<div class="button_white" style="width:150px;">
 			<i class='fa fa-star fa-4x'></i><br><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a>
 		</div>
 	</div>
