--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ layout: default
 <div class="button_white" style="float:right; height:2em"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div style="text-align:center;margin:1em">
-		<div class="button_white" style="width:150px; float:left">
+	<div style="text-align:center;margin:2em">
+		<div class="button_white" style="width:28%; float:left">
 			<i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a>	
 		</div>
 		<div class="button_white" style="width:150px; display: inline-block">
