--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ layout: default
 	</div>
 <h3 class="page-heading">Further Information</h3>
 	<div>
-		<p class="button_white" style="width:28%; height:6em;"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
-		<p class="button_white" style="width:28%; height:6em;"><i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a></p>
-		<p class="button_white" style="width:28%; height:6em"><i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach & Misc</a></p>
+		<p class="button_white" style="width:28%; height:6em; float:left"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
+		<p class="button_white" style="width:28%; height:6em; display:inline-block"><i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a></p>
+		<p class="button_white" style="width:28%; height:6em; float:right"><i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach & Misc</a></p>
 	</div>	
 	
 
