--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@ layout: default
 <div class="button_white" style="float:right; height:2em"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div style="text-align:center;margin:2em">
+	<div style="text-align:center;margin:2.5em">
 		<div class="button_white" style="width:28%; float:left">
 			<i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a>	
 		</div>
-		<div class="button_white" style="width:150px; display: inline-block">
+		<div class="button_white" style="width:28%; display: inline-block">
 			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/">A semi-analytical perspective</a>
 		</div>
-		<div class="button_white" style="width:150px; float:right">
+		<div class="button_white" style="width:28%; float:right">
 			<i class='fa fa-star fa-4x'></i><br><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a>
 		</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
-	<div>
-		<p class="button_white" style="width:28%; height:6em; float:left"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
-		<p class="button_white" style="width:28%; height:6em; display:inline-block"><i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a></p>
-		<p class="button_white" style="width:28%; height:6em; float:right"><i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach & Misc</a></p>
+	<div style="text-align:center;margin:2.5em">
+		<p class="button_white" style="width:28%; height:7em; float:left"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
+		<p class="button_white" style="width:28%; height:7em; display:inline-block"><i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a></p>
+		<p class="button_white" style="width:28%; height:7em; float:right"><i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach & Misc</a></p>
 	</div>	
 	
 
