--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 <h3 class="page-heading">Projects</h3>
 	<div style="text-align:center;margin:2.5em">
 		<div class="button_white" style="width:28%; float:left; word-break:break-word">
-			<i class='fas fa-atom fa-4x'></i><br><span class="vertically-align"><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a></span>	
+			<i class='fas fa-atom fa-4x'></i><br><span class="vetically-centered"><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a></span>	
 		</div>
 		<div class="button_white" style="width:28%; display: inline-block">
 			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/">A semi-analytical perspective</a>
