--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@ layout: default
 		<div class="button_white" style="width:28%; display: inline-block">
 			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/">A semi-analytical perspective</a>
 		</div>
-		<div id="container" class="button_white" style="width:28%; float:right">
-			<i class='fa fa-star fa-4x'></i><br><span class="vetically-centered; vertical-align:middle"><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></span>
+		<div class="button_white" style="width:28%; float:right">
+			<i class='fa fa-star fa-4x'></i><br><span id="container" class="vetically-centered; vertical-align:middle"><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></span>
 		</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
 	<div style="text-align:center;margin:2.5em">
-		<p class="button_white" style="width:28%; float:left"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
+		<p id="container"  class="button_white" style="width:28%; float:left"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
 		<p class="button_white" style="width:28%; display:inline-block"><i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a></p>
 		<p class="button_white" style="width:28%; float:right"><i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach & Misc</a></p>
 	</div>	
