--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: default
 			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/">A semi-analytical perspective</a>
 		</div>
 		<div id="container" class="button_white" style="width:28%; float:right">
-			<div><i class='fa fa-star fa-4x'></i></div><div><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></div>
+			<div><i class='fa fa-star fa-4x'></i><br></div><div><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></div>
 		</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
