--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@ layout: default
 	
 <div align="center" style="margin-bottom: 15px; font-size: 1.5em; float:center; display:flex; justify-content:center; align-items:center; margin:0.5em; margin-bottom:2.5em">
 	
-		<div class="button_white" style="position: relative; margin-left: 20px">
+		<div class="button_white_project" style="position: relative; margin-left: 20px">
 			<div id="container3"><i class='fas fa-lightbulb fa-2x'></i></div>
-			<div id="container1-font-smaller"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
+			<div id="container1-font-medium"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
-		<div class="button_white" style="position: relative; margin-left: 20px">
+		<div class="button_white_project" style="position: relative; margin-left: 20px">
 			<div id="container2"><i class='fas fa-binoculars fa-2x'></i></div>
-			<div id="container1-font-smaller"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
+			<div id="container1-font-medium"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
 		</div>
-		<div class="button_white" style="position: relative; margin-left: 20px">
+		<div class="button_white_project" style="position: relative; margin-left: 20px">
 			<div id="container3"><i class='fa fa-star fa-2x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}multidark_gals/">The MultiDark- Galaxies</a></div>
 		</div>
