--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@ layout: default
 	
 <div align="center" style="margin-bottom: 15px; font-size: 1.5em; float:center; display:flex; justify-content:center; align-items:center; margin:0.5em; margin-bottom:2.5em">
 	
-		<div class="button_white_project" style="position: relative; margin-left: 20px">
+		<div class="button_white_project" style="position: relative">
 			<div id="container3"><i class='fas fa-lightbulb fa-2x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}lsbgs/">Low Surface Brightness Galaxies (LSBGs)</a></div>	
 		</div>
-		<div class="button_white_project" style="position: relative; margin-left: 20px">
+		<div class="button_white_project" style="position: relative">
 			<div id="container2"><i class='fas fa-binoculars fa-2x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}perspective/">A semi-analytical perspective</a></div>
 		</div>
-		<div class="button_white_project" style="position: relative; margin-left: 20px">
+		<div class="button_white_project" style="position: relative">
 			<div id="container3"><i class='fa fa-star fa-2x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}multidark_gals/">The MultiDark- Galaxies</a></div>
 		</div>
@@ -57,15 +57,15 @@ layout: default
 <h3 class="page-heading">Further Information</h3>
 	<div align="center" style="margin-bottom: 15px; font-size: 1.5em; float:center; display:flex; justify-content:center; align-items:center; margin:0.5em; margin-bottom:2.5em">
 
-		<div class="button_white" style="position: relative; margin-left: 20px">
+		<div class="button_white" style="position: relative">
 			<div id="container3"><i class='fas fa-user-astronaut fa-2x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}about_me/">About<br>me</a></div>	
 		</div>
-		<div class="button_white"  style="position: relative; margin-left: 20px">
+		<div class="button_white"  style="position: relative">
 			<div id="container3"><i class='fas fa-hand-spock fa-2x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}outreach/">Outreach<br>& Misc</a></div>
 		</div>
-		<div class="button_white"  style="position: relative; margin-left: 20px">
+		<div class="button_white"  style="position: relative">
 			<div id="container3"><i class='fas fa-bullhorn fa-2x'></i></div>
 			<div id="container1-font-medium"><a href="{{ site.url }}talks/">Talks &<br>Presentations</a></div>	
 		</div>
